________________________________________________________________________________

                          Filter::Crypto, Version 2.05
________________________________________________________________________________

Revision history for Perl extension Filter::Crypto.
_________________

v2.05 TODO

    - Removed the rudimentary checks on the compiler versions in Makefile.PL
      when building these modules on Windows since it appears that using
      different compilers (and hence potentially different C RTL DLLs) is safe
      after all.  Note, however, that there is still a compatibility problem
      when building this module with Visual Studio .NET 2002/2003 (VC7) or
      earlier if your perl was built with Visual Studio 2005 (VC8) or later: see
      [perl #121448].  However, that is quite an unlikely scenario, so it is not
      worth checking for in Makefile.PL.

    - Changed all PerlLIO_*() function calls to the corresponding lowio
      functions: they should be redefined as necessary by perl's header files
      anyway, which is indeed the case in perl-5.8.1 and above, at least -- see
      the exchanges between myself and Jan Dubois on the "perl5-porters" mailing
      list, 04-05 Mar 2010, for more details on this.

    - Uploaded source code to GitHub and included repository URLS in meta data.

    - Included META.json file in addition to META.yml.

    - Simplified Makefile.PL commands for making a new distribution archive.

    - Bumped minimum required ExtUtils::MakeMaker version to 6.66 to allow
      building with 64-bit perl (otherwise the build fails with errors about
      fakethr.h and perlsfio.h).

    - Reverted to plain old ExtUtils::MakeMaker for building, now that that's
      more fully maintained again.  Module::Install has virtually died a death,
      and Module::Build is no better either.  Require a fairly recent version
      (6.64) to ensure that all parameters used are supported, to save jumping